--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -65,13 +65,13 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="79"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kr0-pV-KoN">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="79"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="79"/>
                                         <subviews>
                                             <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CvJ-cx-GbG" customClass="TagListView" customModule="TagListView">
-                                                <rect key="frame" x="8" y="28" width="50" height="24"/>
+                                                <rect key="frame" x="8" y="28" width="0.0" height="24"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="PHE-bI-Ymq"/>
+                                                    <constraint firstAttribute="width" id="PHE-bI-Ymq"/>
                                                     <constraint firstAttribute="height" constant="24" id="vNr-zb-9LK"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
