--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -99,7 +99,7 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="79"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KUC-4Y-beP">
-                                        <rect key="frame" x="0.0" y="0.0" width="68" height="79"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="134" height="79"/>
                                         <subviews>
                                             <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2iB-AG-Xp8" customClass="TagListView" customModule="TagListView">
                                                 <rect key="frame" x="8" y="28" width="0.0" height="24"/>
@@ -125,18 +125,21 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqA-ji-qaT">
-                                                <rect key="frame" x="34" y="25" width="30" height="30"/>
+                                                <rect key="frame" x="34" y="25" width="96" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="9FK-yG-8HR"/>
                                                     <constraint firstAttribute="width" constant="46" id="Ewt-5H-yay"/>
                                                 </constraints>
-                                                <state key="normal" title="Add"/>
+                                                <state key="normal" title="Add To Profile"/>
                                                 <variation key="default">
                                                     <mask key="constraints">
                                                         <exclude reference="9FK-yG-8HR"/>
                                                         <exclude reference="Ewt-5H-yay"/>
                                                     </mask>
                                                 </variation>
+                                                <connections>
+                                                    <action selector="addToProfilePressed:" destination="mYP-fS-yh2" eventType="touchUpInside" id="X1O-Ip-ycd"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -184,10 +187,14 @@
                                     <outlet property="delegate" destination="mYP-fS-yh2" id="nK3-lC-h0h"/>
                                 </connections>
                             </searchBar>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="34F-hU-9oS">
+                                <rect key="frame" x="290" y="290" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="f8Q-9k-XpF" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="0jf-fg-qhJ"/>
+                            <constraint firstItem="34F-hU-9oS" firstAttribute="centerY" secondItem="qcq-BR-zCX" secondAttribute="centerY" id="2mX-BX-vpe"/>
                             <constraint firstItem="hfh-eM-SNs" firstAttribute="top" secondItem="in9-u2-WDu" secondAttribute="bottom" id="E8f-SK-i7h"/>
                             <constraint firstItem="egt-Ig-axq" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="HCS-0Y-HSL"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="HVk-tz-WYd"/>
@@ -198,6 +205,7 @@
                             <constraint firstItem="hfh-eM-SNs" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="k5W-WH-1AA"/>
                             <constraint firstItem="f8Q-9k-XpF" firstAttribute="centerY" secondItem="qcq-BR-zCX" secondAttribute="centerY" id="k8t-X8-cCt"/>
                             <constraint firstAttribute="trailing" secondItem="hfh-eM-SNs" secondAttribute="trailing" id="n3h-Ec-nK4"/>
+                            <constraint firstItem="34F-hU-9oS" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="osL-TT-jvf"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="top" secondItem="hfh-eM-SNs" secondAttribute="bottom" id="r0R-cz-WVy"/>
                             <constraint firstAttribute="trailing" secondItem="egt-Ig-axq" secondAttribute="trailing" id="rrR-J3-sOt"/>
                         </constraints>
@@ -211,6 +219,8 @@
                         <outlet property="tagChoicesView" destination="f8Q-9k-XpF" id="Odn-oM-mHy"/>
                         <outlet property="tagChosenView" destination="2iB-AG-Xp8" id="bDk-dk-vHq"/>
                         <outlet property="tagChosenViewWidthConstraint" destination="5AO-FB-Xpb" id="MQT-ER-5rL"/>
+                        <outlet property="theActivityIndicator" destination="34F-hU-9oS" id="xVE-me-lTW"/>
+                        <outlet property="theAddToProfileButton" destination="QqA-ji-qaT" id="sEk-YM-Gwa"/>
                         <outlet property="theCategoryLabel" destination="n6T-Fz-CxS" id="fyJ-E2-7vb"/>
                         <outlet property="theChosenTagHolderView" destination="KUC-4Y-beP" id="gL6-U7-idc"/>
                         <outlet property="theDoneSpecialtyButton" destination="fSZ-o2-TeW" id="oDs-Ec-Q8M"/>
