--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -8,7 +8,7 @@
         <!--Profile Index View Controller-->
         <scene sceneID="8Ge-7n-FwY">
             <objects>
-                <viewController id="FWd-U8-Jgx" customClass="ProfileIndexViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileIndexViewController" id="FWd-U8-Jgx" customClass="ProfileIndexViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iab-pd-kb6"/>
                         <viewControllerLayoutGuide type="bottom" id="9PT-2X-tXc"/>
@@ -31,13 +31,14 @@
                             <constraint firstItem="UKB-hL-shh" firstAttribute="centerX" secondItem="iEg-Es-KxU" secondAttribute="centerX" id="iPG-8y-mnx"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="qt7-0Y-BIE"/>
                     <connections>
                         <segue destination="mYP-fS-yh2" kind="show" identifier="AddingTagsToProfileSegue" id="pML-or-Fkj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p9b-39-CQs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="560" y="530"/>
+            <point key="canvasLocation" x="1372" y="530"/>
         </scene>
         <!--Adding Tags To Profile View Controller-->
         <scene sceneID="uBc-WO-8Po">
@@ -51,10 +52,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="egt-Ig-axq">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="egt-Ig-axq">
                                 <rect key="frame" x="0.0" y="143" width="600" height="457"/>
                                 <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSZ-o2-TeW">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSZ-o2-TeW">
                                         <rect key="frame" x="282" y="214" width="37" height="30"/>
                                         <state key="normal" title="Done"/>
                                         <connections>
@@ -95,7 +96,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRp-GR-lFB">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lRp-GR-lFB">
                                 <rect key="frame" x="0.0" y="64" width="600" height="79"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KUC-4Y-beP">
@@ -177,7 +178,7 @@
                                     </mask>
                                 </variation>
                             </scrollView>
-                            <searchBar contentMode="redraw" placeholder="Search Tags" translatesAutoresizingMaskIntoConstraints="NO" id="hfh-eM-SNs">
+                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Search Tags" translatesAutoresizingMaskIntoConstraints="NO" id="hfh-eM-SNs">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="chx-xf-2gq"/>
@@ -229,7 +230,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fZx-kU-P0C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1331" y="513"/>
+            <point key="canvasLocation" x="2143" y="513"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZoA-oy-tlM">
+            <objects>
+                <navigationController storyboardIdentifier="ProfileNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="yJw-Sh-Q3J" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1RS-Qe-heJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="FWd-U8-Jgx" kind="relationship" relationship="rootViewController" id="nbG-kE-H2T"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aef-yr-ELc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="560" y="530"/>
         </scene>
     </scenes>
 </document>
